rc3: fixed some Vfs, ClasspathHelper and other issues. add another jboss6. added licence file.
git-svn-id: http://reflections.googlecode.com/svn/trunk@104 71d6c4fe-fe51-0410-8f60-b1193cea1bb0